[package]
name = "fretch"
version = "0.1.0"
authors = ["Marvin Humphrey <marvin@rectangular.com>"]
edition = "2018"
license = "CC0-1.0"
description = "Persistent undo engine using Git-compatible format"
categories = ["data-structures"]
keywords = ["undo", "redo", "git"]
readme = "README.md"

[badges]
maintenance = { status = "experimental" }

[dependencies]
